github and its ./ things smh

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <!-- circles -->
     <div class="relative overflow-x-clip">
         <div class=" absolute topCircleOne">
-            <img src="/img/Circle.png" class="animate-spin-slow opacity-50">
+            <img src="./img/Circle.png" class="animate-spin-slow opacity-50">
         </div>
         <div class=" absolute topCircleTwo">
-            <img src="/img/Circle.png" class="animate-spin-slow opacity-50 ">
+            <img src="./img/Circle.png" class="animate-spin-slow opacity-50 ">
         </div>
     </div>
     <div>
@@ -124,7 +124,7 @@
         <!-- bell -->
         <div class="group relative ">
             <img class="object-cover"
-                src="/img/projects/Bell.png"/>
+                src="./img/projects/Bell.png"/>
                 <div
                 class="absolute top-0 left-0 h-full w-full grid grid-rows-7 bg-gradient-to-t from-black duration-500  group-hover:h-full md:opacity-0 group-hover:opacity-100">
                 <div class="row-start-4 row-end-8 flex flex-col justify-evenly h-full">
@@ -134,7 +134,7 @@
                     </div>
                     <p class="text-sm md:text-base text-grey mx-6">A total overhaul of the BELL 4G application which is a network management application of an ISP in Sri Lanka.</p>
                     <div class="grid grid-cols-7">
-                        <img class="mx-6" src="/img/tags/tagui.svg" alt="">
+                        <img class="mx-6" src="./img/tags/tagui.svg" alt="">
                     <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-6 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.figma.com/community/file/1111198487242523498" target="_blank">View Project</a>
                     </div>
                 </div>
@@ -153,7 +153,7 @@
 
         <div class="group relative ">
             <img class="object-cover"
-                src="/img/projects/Dominoes.png"/>
+                src="./img/projects/Dominoes.png"/>
                 <div
                 class="absolute top-0 left-0 h-full w-full grid grid-rows-7 bg-gradient-to-t from-black duration-500  group-hover:h-full md:opacity-0 group-hover:opacity-100">
                 <div class="row-start-4 row-end-8 flex flex-col justify-evenly h-full">
@@ -163,7 +163,7 @@
                     </div>
                     <p class="text-sm md:text-base text-grey mx-6">A Project to update the UI & UX of the Dominos LK android app while addressing some Flow Errors.</p>
                     <div class="grid grid-cols-7">
-                        <img class="mx-6" src="/img/tags/tagui.svg" alt="">
+                        <img class="mx-6" src="./img/tags/tagui.svg" alt="">
                     <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-6 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.figma.com/community/file/1111198487242523498" target="_blank">View Project</a>
                     </div>
                 </div>
@@ -172,7 +172,7 @@
 
         <div class="group relative ">
             <img class="object-cover"
-                src="/img/projects/subedu.png"/>
+                src="./img/projects/subedu.png"/>
             <div
                 class="absolute top-0 left-0 h-full w-full grid grid-rows-7 bg-gradient-to-t from-black duration-500  group-hover:h-full md:opacity-0 group-hover:opacity-100">
                 <div class="row-start-4 row-end-8 flex flex-col justify-evenly h-full">
@@ -182,7 +182,7 @@
                     </div>
                     <p class="text-sm md:text-base text-grey mx-6">One of my first UI designs taken on to understand concepts of User Interface Design.</p>
                     <div class="grid grid-cols-7">
-                        <img class="mx-6" src="/img/tags/tagui.svg" alt="">
+                        <img class="mx-6" src="./img/tags/tagui.svg" alt="">
                     <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-6 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.figma.com/community/file/1111198487242523498" target="_blank">View Project</a>
                     </div>
                 </div>
@@ -190,7 +190,7 @@
         </div>
         <div class="group relative ">
             <img class="object-cover"
-                src="/img/projects/comingsoonalt2.png"/>
+                src="./img/projects/comingsoonalt2.png"/>
         </div>
     </section>
 
@@ -198,7 +198,7 @@
     <!-- Cirlcle -->
     <div class="relative overflow-x-clip">
         <div class=" absolute middleCircle">
-            <img src="/img/circle.png" class="animate-spin-slow opacity-50 ">
+            <img src="./img/circle.png" class="animate-spin-slow opacity-50 ">
         </div>
     </div>
     <section id="about" class=" px-6 mx-auto container grid content-center h-screen">
@@ -243,12 +243,12 @@
                 </div>
                 <!-- tags -->
                 <div class="py-4 md:py-0 grid grid-cols-3 md:grid-cols-1 md:grid-rows-6 justify-items-center md:justify-items-end object-contain">
-                    <img class="my-auto pb-2 md:pb-0" src="/img/tags/tagui.svg" alt="">
-                    <img class="my-auto pb-2 md:pb-0" src="/img/tags/tagjs.svg" alt="">
-                    <img class="my-auto pb-2 md:pb-0" src="/img/tags/tagvue.svg" alt=""> 
-                    <img class="my-auto" src="/img/tags/tagtail.svg" alt="">
-                    <img class="my-auto" src="/img/tags/tagfig.svg" alt="">
-                    <img class="my-auto" src="/img/tags/tagreact.svg" alt=""> 
+                    <img class="my-auto pb-2 md:pb-0" src="./img/tags/tagui.svg" alt="">
+                    <img class="my-auto pb-2 md:pb-0" src="./img/tags/tagjs.svg" alt="">
+                    <img class="my-auto pb-2 md:pb-0" src="./img/tags/tagvue.svg" alt=""> 
+                    <img class="my-auto" src="./img/tags/tagtail.svg" alt="">
+                    <img class="my-auto" src="./img/tags/tagfig.svg" alt="">
+                    <img class="my-auto" src="./img/tags/tagreact.svg" alt=""> 
 
                   
                 </div>
