--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="" />
     <link rel="stylesheet" href="css/main.css">
     
     <!-- favicons -->
@@ -198,7 +197,7 @@
     <!-- Cirlcle -->
     <div class="relative overflow-x-clip">
         <div class=" absolute middleCircle">
-            <img src="./img/circle.png" class="animate-spin-slow opacity-50 ">
+            <img src="./img/Circle.png" class="animate-spin-slow opacity-50 ">
         </div>
     </div>
     <section id="about" class=" px-6 mx-auto container grid content-center h-screen">
