--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <p class="text-sm md:text-base text-grey mx-6">A total overhaul of the BELL 4G application which is a network management application of an ISP in Sri Lanka.</p>
                     <div class="grid grid-cols-7">
                         <img class="mx-6" src="./img/tags/tagui.svg" alt="">
-                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-6 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.figma.com/community/file/1111198487242523498" target="_blank">View Project</a>
+                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-6 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.behance.net/gallery/148207599/Lanka-Bell-Redesign" target="_blank">View Project</a>
                     </div>
                 </div>
             </div>
@@ -163,7 +163,7 @@
                     <p class="text-sm md:text-base text-grey mx-6">A Project to update the UI & UX of the Dominos LK android app while addressing some Flow Errors.</p>
                     <div class="grid grid-cols-7">
                         <img class="mx-6" src="./img/tags/tagui.svg" alt="">
-                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-6 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.figma.com/community/file/1111198487242523498" target="_blank">View Project</a>
+                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-6 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.behance.net/gallery/147662097/Dominos-Redesign" target="_blank">View Project</a>
                     </div>
                 </div>
             </div>
