--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class=" px-6 mx-auto container grid content-center h-screen">
+    <footer id="contact" class=" px-6 mx-auto container grid content-center h-screen">
             <div class="flex flex-col space-y-10 pt-4">
                 <div>
                     <p class="text-4xl md:text-5xl font-black">CONTACT ME</p>
@@ -296,7 +296,7 @@
 
 
             </div>
-    </section>
+    </footer>
 
     <!-- footer -->
     <section id="footer" class="pb-6 px-6 mx-auto container flex justify-between content-center">
