--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     </section>
 
     <!-- Contact Section -->
-    <footer id="contact" class=" px-6 mx-auto container grid content-center h-screen">
+    <section id="contact" class=" px-6 mx-auto container grid content-center h-screen">
             <div class="flex flex-col space-y-10 pt-4">
                 <div>
                     <p class="text-4xl md:text-5xl font-black">CONTACT ME</p>
@@ -296,17 +296,17 @@
 
 
             </div>
-    </footer>
+    </section>
 
     <!-- footer -->
-    <section id="footer" class="pb-6 px-6 mx-auto container flex justify-between content-center">
+    <footer id="footer" class="pb-6 px-6 mx-auto container flex justify-between content-center">
         <div class="text-sm">
             © Dimuthu Munaweera 2022
         </div>
         <div class="text-brightGreen font-black text-sm">
             <a href="#home">Back to Top</a>           
         </div>
-    </section>
+    </footer>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
