--- a/index.html
+++ b/index.html
@@ -126,6 +126,26 @@
     <section id="work" class=" px-6 mx-auto container grid md:grid-cols-2 gap-4">
         <!-- projects-recents on top -->
 
+
+        <div class="group relative ">
+            <img class="object-cover"
+                src="./img/projects/Dope.png"/>
+            <div
+                class="absolute top-0 left-0 h-full w-full grid grid-rows-7 bg-gradient-to-t from-black duration-500  group-hover:h-full md:opacity-0 group-hover:opacity-100">
+                <div class="row-start-4 row-end-8 flex flex-col justify-evenly h-full">
+                    <div class="flex mx-6 justify-between">
+                        <p class="text-xl font-black text-white">DopeDeals</p>
+                        <p class="text-xl font-bold text-grey">2022</p>
+                    </div>
+                    <p class="text-sm md:text-base text-grey mx-6">Dope Deals is an Second hand marketplace with some nifty features that could ease the buying and selling process.</p>
+                    <div class="grid grid-cols-7">
+                        <img class="mx-6" src="./img/tags/tagui.svg" alt="">
+                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-6 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.behance.net/gallery/152541073/DopeDeals" target="_blank">View Project</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="group relative ">
             <img class="object-cover"
                 src="./img/projects/Bbuddy.png"/>
@@ -145,7 +165,6 @@
             </div>
         </div>
 
-        <!-- bell -->
         <div class="group relative ">
             <img class="object-cover"
                 src="./img/projects/Bell.png"/>
@@ -213,10 +232,10 @@
             </div>
         </div>
 
-        <!-- <div class="group relative ">
+        <div class="group relative ">
             <img class="object-cover"
                 src="./img/projects/comingsoonalt2.png"/>
-        </div> -->
+        </div>
         
 
     </section>
