Added Form Validation

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <p class="text-sm md:text-base text-grey mx-6">Dope Deals is an Second hand marketplace with some nifty features that could ease the buying and selling process.</p>
                     <div class="grid grid-cols-7">
                         <img class="mx-6" src="./img/tags/tagui.svg" alt="">
-                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-6 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.behance.net/gallery/152541073/DopeDeals" target="_blank">View Project</a>
+                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-5 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.behance.net/gallery/152541073/DopeDeals" target="_blank">View Project</a>
                     </div>
                 </div>
             </div>
@@ -159,7 +159,7 @@
                     <p class="text-sm md:text-base text-grey mx-6">My first Case Study. Objective was to create an efficient Bus Transportation System.</p>
                     <div class="grid grid-cols-7">
                         <img class="mx-6" src="./img/tags/tagui.svg" alt="">
-                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-6 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.behance.net/gallery/152022623/Bus-Buddy-Bus-Tracking-Application?tracking_source=for_you_feed_user_published" target="_blank">View Project</a>
+                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-5 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.behance.net/gallery/152022623/Bus-Buddy-Bus-Tracking-Application?tracking_source=for_you_feed_user_published" target="_blank">View Project</a>
                     </div>
                 </div>
             </div>
@@ -178,7 +178,7 @@
                     <p class="text-sm md:text-base text-grey mx-6">A total overhaul of the BELL 4G application which is a network management application of an ISP in Sri Lanka.</p>
                     <div class="grid grid-cols-7">
                         <img class="mx-6" src="./img/tags/tagui.svg" alt="">
-                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-6 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.behance.net/gallery/148207599/Lanka-Bell-Redesign" target="_blank">View Project</a>
+                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-5 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.behance.net/gallery/148207599/Lanka-Bell-Redesign" target="_blank">View Project</a>
                     </div>
                 </div>
             </div>
@@ -207,7 +207,7 @@
                     <p class="text-sm md:text-base text-grey mx-6">A Project to update the UI & UX of the Dominos LK android app while addressing some Flow Errors.</p>
                     <div class="grid grid-cols-7">
                         <img class="mx-6" src="./img/tags/tagui.svg" alt="">
-                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-6 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.behance.net/gallery/147662097/Dominos-Redesign" target="_blank">View Project</a>
+                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-5 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.behance.net/gallery/147662097/Dominos-Redesign" target="_blank">View Project</a>
                     </div>
                 </div>
             </div>
@@ -226,7 +226,7 @@
                     <p class="text-sm md:text-base text-grey mx-6">One of my first UI designs taken on to understand concepts of User Interface Design.</p>
                     <div class="grid grid-cols-7">
                         <img class="mx-6" src="./img/tags/tagui.svg" alt="">
-                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-6 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.figma.com/community/file/1111198487242523498" target="_blank">View Project</a>
+                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-5 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.figma.com/community/file/1111198487242523498" target="_blank">View Project</a>
                     </div>
                 </div>
             </div>
@@ -315,7 +315,7 @@
                 <div>
                     <p class="text-4xl md:text-5xl font-black">CONTACT ME</p>
                     <a id="bar"></a>
-                    <form name="gform" id="gform" enctype="text/plain" class="grid md:grid-rows-6 grid-rows-3 pt-10 gap-2.5" action="https://docs.google.com/forms/d/e/1FAIpQLSfiPpVtAYNSFTHZnfp3ckqqwrZSUbJtx6vAzhYFx46soFQ-xg/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
+                    <form name="gform" id="gform" enctype="text/plain" class="grid md:grid-rows-6 grid-rows-3 pt-10 gap-2.5" action="https://docs.google.com/forms/d/e/1FAIpQLSfiPpVtAYNSFTHZnfp3ckqqwrZSUbJtx6vAzhYFx46soFQ-xg/formResponse?" target="hidden_iframe" onsubmit="return validator()">
 
                         <div class="grid md:grid-cols-2 gap-2.5">
                             <input class="text-gray font-bold bg-darkGrey px-2.5 py-5" type="text" placeholder="Your Name" name="entry.174352817" id="entry.174352817">
@@ -328,14 +328,13 @@
                             <input class="col-start-1 col-span-6 bg-brightGreen text-black font-bold py-5" type="submit" value="Send">
                             <input class="col-end-11 col-span-4 border-solid border-2 border-white text-white font-bold" onclick="resetForm()" value="Reset" type="button">
                         </div>
-                        <div id="cover" class="hidden items-center mx-auto font-bold text-brightGreen text-2xl pt-4 content-center">Sweet! Message Sent.</div>
+                        <div class="items-center mx-auto font-bold text-2xl pt-4 content-center">
+                            <div id="cover" class="hiddenFeed">Sweet! Message Sent.</div>
+                        </div>
                     </form>
-                    <iframe name="hidden_iframe" id="hidden_iframe" class="hidden" onload="if(submitted) {}"></iframe>
+                    <iframe name="hidden_iframe" id="hidden_iframe" class="hidden""></iframe>
 
                 </div>                
-
-
-
             </div>
     </section>
 
@@ -418,10 +417,53 @@
         // nav.classList.toggle('hidden')
     })
 
-    form.addEventListener('submit', (e) => {
-        form;
-        $('#cover').hide().fadeIn(500).delay(5000).fadeOut(500);
-    });    
+    let validator = (e) => {
+        let cover = document.getElementById("cover");
+        const name = document.getElementById("entry.174352817");
+        const email = document.getElementById("entry.897766874");
+        const message = document.getElementById("entry.616411337");
+        if (name.value == "") {
+            cover.innerHTML = "Empty Name Field!"
+            cover.className = "showRed";
+            setTimeout(() =>{
+                cover.className = "hiddenFeed";
+            },5500)
+            return false;
+
+        }else if (email.value == "") {
+            cover.innerHTML = "Empty Email Field!"
+            cover.className = "showRed";
+            setTimeout(() =>{
+                cover.className = "hiddenFeed";
+            },5500)
+            return false;
+            
+        }else if (!email.value.match(/^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/)) {
+            cover.innerHTML = "Invalid Email Address!"
+            cover.className = "showRed";
+            setTimeout(() =>{
+                cover.className = "hiddenFeed";
+            },5500)
+            return false;
+
+        }else if (message.value == "") {
+            cover.innerHTML = "Empty Message Field!"
+            cover.className = "showRed";
+            setTimeout(() =>{
+                cover.className = "hiddenFeed";
+            },5500)
+            return false;
+            
+        }else{
+            cover.innerHTML = "Sweet! Message Sent."
+            cover.className = "showGreen";
+            setTimeout(() =>{
+                cover.className = "hiddenFeed";
+            },5500)
+            return true;
+        }
+
+    }; 
 </script>
 
 
