--- a/index.html
+++ b/index.html
@@ -134,13 +134,32 @@
                 class="absolute top-0 left-0 h-full w-full grid grid-rows-7 bg-gradient-to-t from-black duration-500  group-hover:h-full md:opacity-0 group-hover:opacity-100">
                 <div class="row-start-4 row-end-8 flex flex-col justify-evenly h-full">
                     <div class="flex mx-6 justify-between">
-                        <p class="text-xl font-black text-white">DopeDeals</p>
+                        <p class="text-xl font-black text-white">Peaks</p>
                         <p class="text-xl font-bold text-grey">2022</p>
                     </div>
-                    <p class="text-sm md:text-base text-grey mx-6">Dope Deals is an Second hand marketplace with some nifty features that could ease the buying and selling process.</p>
+                    <p class="text-sm md:text-base text-grey mx-6">This is a landing page for a design agency namely Peaks which tries to highlight modern flat design</p>
                     <div class="grid grid-cols-7">
                         <img class="mx-6" src="./img/tags/tagui.svg" alt="">
-                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-5 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.behance.net/gallery/152541073/DopeDeals" target="_blank">View Project</a>
+                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-5 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.behance.net/gallery/154784815/Peaks-Design-Agency" target="_blank">View Project</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="group relative ">
+            <img class="object-cover"
+                src="./img/projects/unlmtd.png"/>
+            <div
+                class="absolute top-0 left-0 h-full w-full grid grid-rows-7 bg-gradient-to-t from-black duration-500  group-hover:h-full md:opacity-0 group-hover:opacity-100">
+                <div class="row-start-4 row-end-8 flex flex-col justify-evenly h-full">
+                    <div class="flex mx-6 justify-between">
+                        <p class="text-xl font-black text-white">UNLMTD</p>
+                        <p class="text-xl font-bold text-grey">2022</p>
+                    </div>
+                    <p class="text-sm md:text-base text-grey mx-6">UNLMTD is a clothing brand created with the desire to provide comfort basics and unique streetwear for daily use.</p>
+                    <div class="grid grid-cols-7">
+                        <img class="mx-6" src="./img/tags/tagui.svg" alt="">
+                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-5 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.behance.net/gallery/152892575/Clothing-Brand-UI-Concept" target="_blank">View Project</a>
                     </div>
                 </div>
             </div>
