--- a/index.html
+++ b/index.html
@@ -270,10 +270,10 @@
             </div>
         </div>
 
-        <!-- <div class="group relative ">
+        <div class="group relative ">
             <img class="object-cover"
                 src="./img/projects/comingsoonalt2.png"/>
-        </div> -->
+        </div>
         
 
     </section>
