--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
                         <p class="text-xl font-bold text-grey">2022</p>
                     </div>
                     <p class="text-sm md:text-base text-grey mx-6">This is a landing page for a design agency namely Peaks which tries to highlight modern flat design</p>
-                    <div class="grid grid-cols-7">
+                    <div class="flex justify-between">
                         <img class="mx-6" src="./img/tags/tagui.svg" alt="">
-                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-5 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.behance.net/gallery/154784815/Peaks-Design-Agency" target="_blank">View Project</a>
+                    <a class="hover:opacity-100 py-1 bg-white mx-6 px-4 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" " href="https://www.behance.net/gallery/154784815/Peaks-Design-Agency" target="_blank">View Project</a>
                     </div>
                 </div>
             </div>
@@ -157,9 +157,9 @@
                         <p class="text-xl font-bold text-grey">2022</p>
                     </div>
                     <p class="text-sm md:text-base text-grey mx-6">UNLMTD is a clothing brand created with the desire to provide comfort basics and unique streetwear for daily use.</p>
-                    <div class="grid grid-cols-7">
+                    <div class="flex justify-between">
                         <img class="mx-6" src="./img/tags/tagui.svg" alt="">
-                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-5 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.behance.net/gallery/152892575/Clothing-Brand-UI-Concept" target="_blank">View Project</a>
+                    <a class="hover:opacity-100 py-1 bg-white mx-6 px-4 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" " href="https://www.behance.net/gallery/152892575/Clothing-Brand-UI-Concept" target="_blank">View Project</a>
                     </div>
                 </div>
             </div>
@@ -176,9 +176,9 @@
                         <p class="text-xl font-bold text-grey">2022</p>
                     </div>
                     <p class="text-sm md:text-base text-grey mx-6">Dope Deals is an Second hand marketplace with some nifty features that could ease the buying and selling process.</p>
-                    <div class="grid grid-cols-7">
+                    <div class="flex justify-between">
                         <img class="mx-6" src="./img/tags/tagui.svg" alt="">
-                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-5 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.behance.net/gallery/152541073/DopeDeals" target="_blank">View Project</a>
+                    <a class="hover:opacity-100 py-1 bg-white mx-6 px-4 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" " href="https://www.behance.net/gallery/152541073/DopeDeals" target="_blank">View Project</a>
                     </div>
                 </div>
             </div>
@@ -195,9 +195,9 @@
                         <p class="text-xl font-bold text-grey">2022</p>
                     </div>
                     <p class="text-sm md:text-base text-grey mx-6">My first Case Study. Objective was to create an efficient Bus Transportation System.</p>
-                    <div class="grid grid-cols-7">
+                    <div class="flex justify-between">
                         <img class="mx-6" src="./img/tags/tagui.svg" alt="">
-                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-5 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.behance.net/gallery/152022623/Bus-Buddy-Bus-Tracking-Application?tracking_source=for_you_feed_user_published" target="_blank">View Project</a>
+                    <a class="hover:opacity-100 py-1 bg-white mx-6 px-4 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" " href="https://www.behance.net/gallery/152022623/Bus-Buddy-Bus-Tracking-Application?tracking_source=for_you_feed_user_published" target="_blank">View Project</a>
                     </div>
                 </div>
             </div>
@@ -214,9 +214,9 @@
                         <p class="text-xl font-bold text-grey">2022</p>
                     </div>
                     <p class="text-sm md:text-base text-grey mx-6">A total overhaul of the BELL 4G application which is a network management application of an ISP in Sri Lanka.</p>
-                    <div class="grid grid-cols-7">
+                    <div class="flex justify-between">
                         <img class="mx-6" src="./img/tags/tagui.svg" alt="">
-                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-5 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.behance.net/gallery/148207599/Lanka-Bell-Redesign" target="_blank">View Project</a>
+                    <a class="hover:opacity-100 py-1 bg-white mx-6 px-4 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" " href="https://www.behance.net/gallery/148207599/Lanka-Bell-Redesign" target="_blank">View Project</a>
                     </div>
                 </div>
             </div>
@@ -243,9 +243,9 @@
                         <p class="text-xl font-bold text-grey">2022</p>
                     </div>
                     <p class="text-sm md:text-base text-grey mx-6">A Project to update the UI & UX of the Dominos LK android app while addressing some Flow Errors.</p>
-                    <div class="grid grid-cols-7">
+                    <div class="flex justify-between">
                         <img class="mx-6" src="./img/tags/tagui.svg" alt="">
-                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-5 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.behance.net/gallery/147662097/Dominos-Redesign" target="_blank">View Project</a>
+                        <a class="hover:opacity-100 py-1 bg-white mx-6 px-4 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.behance.net/gallery/147662097/Dominos-Redesign" target="_blank">View Project</a>
                     </div>
                 </div>
             </div>
@@ -262,9 +262,9 @@
                         <p class="text-xl font-bold text-grey">2022</p>
                     </div>
                     <p class="text-sm md:text-base text-grey mx-6">One of my first UI designs taken on to understand concepts of User Interface Design.</p>
-                    <div class="grid grid-cols-7">
+                    <div class="flex justify-between">
                         <img class="mx-6" src="./img/tags/tagui.svg" alt="">
-                    <a class="hover:opacity-100 py-1 bg-white mx-6 col-start-5 md:col-start-5 col-end-8 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.figma.com/community/file/1111198487242523498" target="_blank">View Project</a>
+                        <a class="hover:opacity-100 py-1 bg-white mx-6 px-4 text-base text-center font-bold text-black hover:bg-brightGreen duration-300" href="https://www.figma.com/community/file/1111198487242523498" target="_blank">View Project</a>
                     </div>
                 </div>
             </div>
