--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -103,8 +104,7 @@
         </div>
     </nav>
     <!-- Hero section -->
-    <section  class=" px-6 mx-auto container " > 
-        <div class="grid content-center h-screen" style="margin-top: -24px;">
+    <section class="flex px-6 items-center container containerHeight mx-auto" > 
             <div class="tracking-wider">
                     <div class="font-black text-2xl md:text-4xl">
                         <!-- Hi, I’m Dimuthu Munaweera! -->
@@ -116,7 +116,6 @@
                     </div>
             </div>
             <!-- scroll indicator -->
-        </div>
         <div>
             <a id="scrollDown"></a>
         </div>
