Updated to flex

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <img src="./img/Circle.png" class="animate-spin-slow opacity-50 ">
         </div>
     </div>
-    <section id="about" class=" px-6 mx-auto container grid content-center h-screen">
+    <section id="about" class="flex px-6 items-center container h-screen mx-auto">
             <div class="md:grid md:grid-cols-3 md:grid-rows-1">
                 <div class="flex flex-col space-y-8 py-4 col-span-2">
                     <div>
